# Pyrite

./: .gitignore  CMakeLists.txt  README.md  fortran_mpi_hello.f90  mpi_communication_tracking.c  mpi_communication_tracking.h  mpi_test_messages.c
docs/: developer-guide.md
examples/: CMakeLists.txt
gateway/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  backend_file.c  backend_shm.c  fortran_mpi_helper.f90  mpi_communication_tracking.c  mpi_communication_tracking.h  mpi_communication_tracking_f08_helpers.c  mpi_communication_tracking_f08_wrappers.f90  shared_telemetry.h  telemetry_daemon.c
tests/: CMakeLists.txt  ctest_driver.py  test_allgather.c  test_allreduce.c  test_any_source.c  test_barrier.c  test_bcast.c  test_bsend.c  test_cancel.c  test_collectives.c  test_fortran_allgather.f90  test_fortran_allgather_f08.f90  test_fortran_allreduce.f90  test_fortran_allreduce_f08.f90  test_fortran_barrier.f90  test_fortran_barrier_f08.f90  test_fortran_bcast_f08.f90  test_fortran_bsend.f90  test_fortran_bsend_f08.f90  test_fortran_cancel.f90  test_fortran_cancel_f08.f90  test_fortran_gather.f90  test_fortran_gather_f08.f90  test_fortran_init_finalize.f90  test_fortran_init_finalize_f08.f90  test_fortran_nonblocking_any_source_wait.f90  test_fortran_nonblocking_any_source_wait_f08.f90  test_fortran_nonblocking_wait.f90  test_fortran_nonblocking_wait_f08.f90  test_fortran_reduce.f90  test_fortran_reduce_f08.f90  test_fortran_rsend.f90  test_fortran_rsend_f08.f90  test_fortran_scatter.f90  test_fortran_scatter_f08.f90  test_fortran_sendrecv.f90  test_fortran_sendrecv_f08.f90  test_fortran_ssend.f90  test_fortran_ssend_f08.f90  test_fortran_testall.f90  (+17 more)
tools/: mpi_data_parser.py  slurm_topology_generator.py  topology_generator.py  website_gateway.py
vis/: analytics-3d.js  analytics-controls.js  analytics.js  index.html  index_live.html  index_offline.html  provider_live.js  provider_offline.js  style.css  visualiser.js  visualiser_core.js
